git-svn-id: https://plugins.svn.wordpress.org/backup-scheduler/trunk@512887 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/lang/backup_scheduler-de_CH.po
+++ b/lang/backup_scheduler-de_CH.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2011-12-23T20:24:49+00:00\n"
+"PO-Revision-Date: 2012-02-25T10:41:51+00:00\n"
 "Last-Translator: PeterDbbert <duebbert@gmx.net>\n"
 "Last-Translator: BernhardKnab <bernhardknab@bernik.ch>\n"
 "Language-Team: \n"
@@ -27,26 +27,20 @@ msgstr "Dieses Plugin ermöglicht zeitgesteuerte Backups wichtiger Teile deiner 
 msgid "Sorry, but you should install/activate %s on your website. Otherwise, this plugin will not work properly!"
 msgstr "Entschuldige, aber du solltest %s auf deiner Website installieren/aktivieren. Dieses Plugin wird sonst nicht funktionieren!"
 
-msgid "Here is the backup files. You can force a new backup or download previous backup files."
-msgstr "Hier sind die Sicherungsdateien. Du kannst ein neue Sicherung erzwingen oder vorherige Sicherungsdateien runterladen."
-
-msgid "An automatic backup will be launched in %s days."
-msgstr "Eine automatische SIcherung wird in %s Tagen gestartet."
-
-msgid "Force a new backup"
-msgstr "Erzwinge eine neue Sicherung"
-
-msgid "Backups"
-msgstr "Sicherungen"
-
 msgid "How often do you want to backup your website?"
 msgstr "Wie oft willst du deine Website sichern?"
 
 msgid "Frequency (in days):"
 msgstr "Häufigkeit (in Tagen):"
 
-msgid "Please note that the backup will occur at midnight to be sure that your website is not overloaded"
-msgstr "Bitte beachte, dass die Sicherung um Mitternacht ausgeführt wird, um sicherzugehen, dass deine Website nicht überladen wird"
+msgid "Time of the backups:"
+msgstr ""
+
+msgid "Please note that 0 means midnight, 1 means 1am, 13 means 1pm, etc. The backup will occur at that time (server time) so make sure that your website is not too overloaded at that time."
+msgstr ""
+
+msgid "Please also note that the backup won't be end exactly at that time. The backup process could take up to 6h especially if you do not have a lot of traffic on your website and/or if the backup is quite huge."
+msgstr ""
 
 msgid "Keep the backup files for (in days):"
 msgstr "Behalte die Sicherungsdateien für (in Tagen):"
@@ -54,11 +48,17 @@ msgstr "Behalte die Sicherungsdateien für (in Tagen):"
 msgid "What do you want to save?"
 msgstr "Was willst du sichern?"
 
-msgid "The plugins directory:"
-msgstr "Das Plugin-Verzeichnis:"
+msgid "All directories (the full Wordpress installation):"
+msgstr ""
 
 msgid "(i.e. %s)"
 msgstr "(d.i. %s)"
+
+msgid "Check this option if you want to save everything. Be careful, because the backup could be quite huge!"
+msgstr ""
+
+msgid "The plugins directory:"
+msgstr "Das Plugin-Verzeichnis:"
 
 msgid "Check this option if you want to save all plugins that you have installed and that you use on this website."
 msgstr "Schalte diese Option ein, wenn du alle deine installierten und auf der Website benutzten Plugins sichern möchtest"
@@ -81,29 +81,53 @@ msgstr "Das SQL Verzeichnis:"
 msgid "Check this option if you want to save the text of your posts, your configurations, etc."
 msgstr "Schalte diese option ei, falls du den Text deiner Posts, deine Konfigurationen u.s.w. sichern willst."
 
+msgid "The maximum file size (in MB):"
+msgstr ""
+
+msgid "Please note that the zip file will be split into multiple files to comply with the maximum file size you have indicated"
+msgstr "Bitte beachte, dass die zip Datei in mehrere Dateien geteilt wird, um die maximale Grösse, die du angegeben hast, nicht zu überschreiten"
+
 msgid "Do you want that the backup is sent by email?"
 msgstr "Willst du, dass die Sicherung uaf deine mail gesendet wird?"
+
+msgid "Send the backup files by email:"
+msgstr ""
 
 msgid "If so, please enter your email:"
 msgstr "Wenn ja, bitte gib deine Mailadresse ein:"
 
-msgid "The maximum attachment size (in MB):"
-msgstr "Die maximale Grösse deiner Beilage (in MB):"
-
-msgid "Please note that the zip file will be split into multiple files to comply with the maximum attachment size you have indicated"
-msgstr "Bitte beachte, dass die zip Datei in mehrere Dateien geteilt wird, um die maximale Grösse, die du angegeben hast, nicht zu überschreiten"
-
-msgid "Do you want to rename the files?"
-msgstr "Willst du die Dateien umbenennen?"
-
-msgid "What is the suffix of the file:"
-msgstr "Was ist das Suffix der Dateien:"
+msgid "Do you want to add a suffix to sent files:"
+msgstr ""
 
 msgid "This option allows going round the blocking feature of some mail provider that block the mails with zip attachments (like GMail)."
 msgstr "Diese Option erlaubt dir die Blockierung einiger Mailanbieter zu umgehen, die Dateien mit der Endung zip nicht akzeptieren (wie GMail)."
 
 msgid "You do not need to fill this field if no mail is to be sent."
 msgstr "Du musst dieses Feld nicht ausfüllen, wenn du keine Mail erhalten möchtest."
+
+msgid "Do you want that the backup is stored on a FTP?"
+msgstr ""
+
+msgid "Save the backup files on a FTP?"
+msgstr ""
+
+msgid "FTP host:"
+msgstr ""
+
+msgid "Should be at the form %s or %s"
+msgstr ""
+
+msgid "Your FTP login:"
+msgstr ""
+
+msgid "Your FTP pass:"
+msgstr ""
+
+msgid "If you want to be notify when the FTP storage is finished, please enter your email:"
+msgstr ""
+
+msgid "Your PHP installation does not support FTP features, thus this option has been disabled! Sorry..."
+msgstr ""
 
 msgid "Advanced - Memory and time management"
 msgstr "erweitert - Speicher- und Zeit-Management"
@@ -120,11 +144,32 @@ msgstr "Für deine Information, das Arbeitsspeicher-Limit deines Webservers ist 
 msgid "It is recommended that the maximum attachment size is not set to a value higher than this one."
 msgstr "Es wird empfohlen die maximale Grösse nicht höher einzustellen als diese Angabe."
 
+msgid "Please note that the files greater than this limit won't be included in the zip file!"
+msgstr ""
+
 msgid "What is the maximum time for the php scripts execution (in seconds):"
 msgstr "Was ist die maximale Zeit der PHP Scipts (in sekunden):"
 
 msgid "Even if you do not have time restriction, it is recommended to set this value to 15sec in order to avoid any killing of the php scripts by your web hoster."
 msgstr "Auch wenn du keine Zeit-Restriktionen haben solltest, ist es empfehlenswert diesen Wert auf 15 Sekunden zu setzen, um das Stoppen des Scripts von deinem Webhoster zu vermeiden."
+
+msgid "Here is the backup files. You can force a new backup or download previous backup files."
+msgstr "Hier sind die Sicherungsdateien. Du kannst ein neue Sicherung erzwingen oder vorherige Sicherungsdateien runterladen."
+
+msgid "An automatic backup will be launched in %s days and %s hours."
+msgstr ""
+
+msgid "The backup process has started %s hours ago but has not finished yet."
+msgstr ""
+
+msgid "Force a new backup (with Mail/FTP)"
+msgstr ""
+
+msgid "Force a new backup (without any external storage or sending)"
+msgstr ""
+
+msgid "Backups"
+msgstr "Sicherungen"
 
 msgid "Parameters"
 msgstr "Parameter"
@@ -147,8 +192,8 @@ msgstr "Sicherungsdateien"
 msgid "Part %s"
 msgstr "Teil %s"
 
-msgid "Backup completed on %s at %s"
-msgstr "Sicherung erstellt auf %s um %s"
+msgid "Backup finished on %s at %s"
+msgstr ""
 
 msgid "The total size of the files is %s"
 msgstr "Die Grösse der Dateien ist %s"
@@ -156,23 +201,74 @@ msgstr "Die Grösse der Dateien ist %s"
 msgid "These files will be deleted in %s days"
 msgstr "Diese Dateien werden in %s Tagen gelöscht"
 
+msgid "Delete these backup files"
+msgstr ""
+
+msgid "The process is still in progress for this backup (begun %s at %s)."
+msgstr ""
+
+msgid "The SQL extraction is in progress (%s tables extracted)."
+msgstr ""
+
+msgid "The ZIP creation is in progress (%s files has been added in the zip file and the current size of the zip is %s)."
+msgstr ""
+
+msgid "The FTP sending is in progress (%s files has been stored in the FTP)."
+msgstr ""
+
+msgid "The MAIL sending is in progress (%s files has been sent)."
+msgstr ""
+
+msgid "Cancel this process"
+msgstr ""
+
+msgid "Please wait..."
+msgstr ""
+
 msgid "(For now, there is no backup files... You should wait or force a backup (see below) )"
 msgstr "(Bis jetzt sind keine Sicherungsdateien vorhanden... Du solltest warten oder eine Sicherung erzwingen (siehe unten))"
 
-msgid "An other backup is still in progress (for %s seconds)... Please wait!"
-msgstr "Eine andere Sicherung wird ausgeführt (noch %s Sekunden)... Bitte warte!"
+msgid "Please wait, a backup is in progress! If you want to force a new backup, refresh this page and end the current backup first."
+msgstr ""
+
+msgid "It is impossible to create the %s file in the %s folder. Please check folder/file permissions."
+msgstr ""
 
 msgid "An other SQL extraction is still in progress (for %s seconds)... Please wait!"
 msgstr ""
 
-msgid "An error occured while sending mail!"
-msgstr "Ein Fehler wurde während des Mailversandes ausgegeben!"
+msgid "(SQL extraction)"
+msgstr ""
+
+msgid "An other backup is still in progress (for %s seconds)... Please wait!"
+msgstr "Eine andere Sicherung wird ausgeführt (noch %s Sekunden)... Bitte warte!"
+
+msgid "(ZIP creation)"
+msgstr ""
+
+msgid "(FTP sending)"
+msgstr ""
+
+msgid "Backup of %s on %s (%s)"
+msgstr ""
+
+msgid "(MAIL sending)"
+msgstr ""
+
+msgid "Your Wordpress installation cannot send emails (with heavy attachments)!"
+msgstr ""
+
+msgid "The file %s cannot be deleted. You should have a problem with file permissions or security restrictions."
+msgstr ""
 
 msgid "An unknown error occured!"
 msgstr "Es ist ein unbekannter Fehler aufgetreten."
 
-msgid "A new backup have been generated!"
-msgstr "Eine neue Sicherung wurde erstellt!"
+msgid "The process has been canceled by a third person"
+msgstr ""
+
+msgid "A new backup has been generated!"
+msgstr "Eine neue Sicherung wurde erstellt !"
 
 msgid "Dear sirs,"
 msgstr "Lieber Nutzer,"
@@ -183,6 +279,27 @@ msgstr "Hier sind %s von %s Sicherungen für heute beigelegt"
 msgid "Best regards,"
 msgstr "Freundliche Grüsse"
 
-msgid "Backup of %s (%s)"
-msgstr "Sicherung von %s(%s)"
+msgid "%s backup files has been successfully saved on your FTP (%s)"
+msgstr ""
+
+msgid "Backup of %s on %s - FTP confirmation"
+msgstr ""
+
+msgid "No host has been defined"
+msgstr ""
+
+msgid "Your PHP installation does not support SSL features... Thus, please use a standard FTP and not a FTPS!"
+msgstr ""
+
+msgid "The host %s cannot be resolved!"
+msgstr ""
+
+msgid "The file %s cannot be transfered to the FTP repository! The ftp_put function returns: %s"
+msgstr ""
+
+msgid "The specified folder %s does not exists. Please create it so that the transfer may start!"
+msgstr ""
+
+msgid "The login/password does not seems valid!"
+msgstr ""
 
